readme updates for zsh/bash completion

--- a/cfg/README
+++ b/cfg/README
@@ -4,3 +4,20 @@ and then run via 'aug redis', etc.
 Alternatively, you can place your configs anywhere you'd like and
 set the env_var AUGER_CFG.
 
+
+BASH completion:
+
+  function _augcomp () {
+    augcfgs=$(aug -l|xargs)
+    local word=${COMP_WORDS[COMP_CWORD]}
+    COMPREPLY=($(compgen -W "$augcfgs" -- "${word}"))
+  }
+  complete -F _augcomp aug
+
+
+ZSH completion:
+
+_augprojects () {
+  compadd $(aug -l)
+}
+compdef _augprojects aug
